array.island.Island.scala.error
Erreur de compilation :
Island:7: error: identifier expected but '(' found.
    if (num.(i)<x){
            ^Island:9: error: identifier expected but '(' found.
      x=num.(i)
            ^Island:12: error: identifier expected but '(' found.
      x=num.(i)
            ^